// Vitest Snapshot v1

exports[`tabs > shoud render mutiple block 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]'>
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud render mutiple block 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]'>
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud render single block 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]'>
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud render single block 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]'>
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support active 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support active 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support active 3`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]' :active=\\"1\\">
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support active 4`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"},{\\"title\\":\\"ts\\"}]' :active=\\"1\\">
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
<template #tab1=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support tabs id 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"event\\">
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support tabs id 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"event-id\\">
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support tabs id 3`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"id with space\\">
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > shoud support tabs id 4`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' tab-id=\\"id starts and having space in the end\\">
<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > should ignore other items 1`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;

exports[`tabs > should ignore other items 2`] = `
"<Tabs :data='[{\\"title\\":\\"js\\"}]' :active=\\"0\\">

<template #tab0=\\"{ title, value, isActive }\\">
<pre><code class=\\"language-js\\">const a = 1;
</code></pre>
<pre><code class=\\"language-ts\\">const a = 1;
</code></pre>
</template>
</Tabs>
"
`;
